--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -23,7 +23,7 @@
                             <div class="col">
                                 <div class="card h-100">
                                     <!-- Same OLD code for product card -->
-                                    <img class="card-img-top" src="{{ asset('images/logo.jpg') }}">
+                                    <img class="card-img-top" src="{{ asset('public/image/product' ~ product.Id) }}">
                                     <div class="card-body">
                                         <h5 class="card-title">{{ product.Name }}</h5>
                                         <h6 class="card-subtitle">Category: {{ product.category }}</h6>
