--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,9 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    {{ include('_nav.html.twig') }}
+    {% block body %}{% endblock %}
+    {{ include('_footer.html.twig') }}
     </body>
+
 </html>
