--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -8,10 +8,6 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
-            </tr>
-            <tr>
                 <th>Name</th>
                 <td>{{ product.Name }}</td>
             </tr>
@@ -21,11 +17,10 @@
             </tr>
             <tr>
                 <th>Price</th>
-                <td>{{ product.Price }}</td>
+                <td>{{ product.Price }}VND</td>
             </tr>
             <tr>
-                <th>Image</th>
-                <td>{{ product.Image }}</td>
+                <img class="border img-fluid w-50" src="{{ asset('/images/product/' ~  product.Image) }}" alt="">
             </tr>
         </tbody>
     </table>
@@ -35,4 +30,8 @@
     <a href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
 
     {{ include('product/_delete_form.html.twig') }}
+    <form action="{{ path('app_add_cart', {'id': product.id}) }}">
+        <input name="quantity">Quantity</input>
+        <button class="btn btn-primary">Add to cart</button>
+    </form>
 {% endblock %}
